Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7029

Segmentation fault at QBasicAtomicInt::ref after creating & destroying QApplication + QTreeView twice

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.6.1
    • 4.6.0
    • None
    • Win32 (VS2005, static linking), Win32 (MinGW dynamic linking)
    • 828b1299e1ecb2da23799a2e49370e00dcf9c126

      Getting segmentation fault after creating & destroying QApplication + QTreeView twice.
      Reproducing code:

      #include <QtGui/QtGui>
      
      void testQt(int argc, char** argv)
      {
          QApplication* app = new QApplication(argc, argv);
          QTreeView* treeView = new QTreeView();
          delete treeView;
          delete app;
      }
      
      int main(int argc, char** argv)
      {
          testQt(argc, argv);
          testQt(argc, argv);
          return 0;
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dzyubenk Denis Dzyubenko (Inactive)
            shwonder Denis Itskovich
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes