Fixes a crash when destroying and creating QApplication.

Moved the gestureManager pointer to a QApplicationPrivate to make sure if
QApplication object is destroyed, QGestureManager pointer is set to zero.

Task-number: QTBUG-7029
Reviewed-by: Thiago